@@ -1,0 +1,1 @@
+open("shutdown", "w").write('exiting')
