@@ -101,6 +101,7 @@ shelve.py
 shlex.py
 shutil.py
 SimpleHTTPServer.py
+SimpleXMLRPCServer.py
 site.py
 smtplib.py
 sndhdr.py
